// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`range [snapshot] > default 1`] = `
<span
  aria-disabled="false"
  aria-label="Range"
  class="vesper-range"
  data-orientation="horizontal"
  dir="ltr"
  style="--radix-slider-thumb-transform: translateX(-50%);"
>
  <span
    class="vesper-range-track"
    data-orientation="horizontal"
  >
    <span
      class="vesper-range-range"
      data-orientation="horizontal"
      style="left: 0%; right: 0%;"
    />
  </span>
  <span
    style="transform: var(--radix-slider-thumb-transform); position: absolute; left: calc(0% + 0px);"
  >
    <span
      aria-orientation="horizontal"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="vesper-typography vesper-typography-label-xs vesper-range-thumb"
      data-orientation="horizontal"
      data-radix-collection-item=""
      role="slider"
      style=""
      tabindex="0"
    />
  </span>
  <span
    style="transform: var(--radix-slider-thumb-transform); position: absolute; left: calc(100% + 0px);"
  >
    <span
      aria-orientation="horizontal"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="100"
      class="vesper-typography vesper-typography-label-xs vesper-range-thumb"
      data-orientation="horizontal"
      data-radix-collection-item=""
      role="slider"
      style=""
      tabindex="0"
    />
  </span>
</span>
`;

exports[`range [snapshot] > disabled 1`] = `
<span
  aria-disabled="true"
  aria-label="Range"
  class="vesper-range"
  data-disabled=""
  data-orientation="horizontal"
  dir="ltr"
  style="--radix-slider-thumb-transform: translateX(-50%);"
>
  <span
    class="vesper-range-track"
    data-disabled=""
    data-orientation="horizontal"
  >
    <span
      class="vesper-range-range"
      data-disabled=""
      data-orientation="horizontal"
      style="left: 0%; right: 0%;"
    />
  </span>
  <span
    style="transform: var(--radix-slider-thumb-transform); position: absolute; left: calc(0% + 0px);"
  >
    <span
      aria-orientation="horizontal"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="vesper-typography vesper-typography-label-xs vesper-range-thumb"
      data-disabled=""
      data-orientation="horizontal"
      data-radix-collection-item=""
      role="slider"
      style=""
    />
  </span>
  <span
    style="transform: var(--radix-slider-thumb-transform); position: absolute; left: calc(100% + 0px);"
  >
    <span
      aria-orientation="horizontal"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="100"
      class="vesper-typography vesper-typography-label-xs vesper-range-thumb"
      data-disabled=""
      data-orientation="horizontal"
      data-radix-collection-item=""
      role="slider"
      style=""
    />
  </span>
</span>
`;

exports[`range [snapshot] > with custom min/max/step 1`] = `
<span
  aria-disabled="false"
  aria-label="Range"
  class="vesper-range"
  data-orientation="horizontal"
  dir="ltr"
  style="--radix-slider-thumb-transform: translateX(-50%);"
>
  <span
    class="vesper-range-track"
    data-orientation="horizontal"
  >
    <span
      class="vesper-range-range"
      data-orientation="horizontal"
      style="left: 0%; right: 0%;"
    />
  </span>
  <span
    style="transform: var(--radix-slider-thumb-transform); position: absolute; left: calc(0% + 0px);"
  >
    <span
      aria-orientation="horizontal"
      aria-valuemax="10"
      aria-valuemin="0"
      aria-valuenow="0"
      class="vesper-typography vesper-typography-label-xs vesper-range-thumb"
      data-orientation="horizontal"
      data-radix-collection-item=""
      role="slider"
      style=""
      tabindex="0"
    />
  </span>
  <span
    style="transform: var(--radix-slider-thumb-transform); position: absolute; left: calc(100% + 0px);"
  >
    <span
      aria-orientation="horizontal"
      aria-valuemax="10"
      aria-valuemin="0"
      aria-valuenow="10"
      class="vesper-typography vesper-typography-label-xs vesper-range-thumb"
      data-orientation="horizontal"
      data-radix-collection-item=""
      role="slider"
      style=""
      tabindex="0"
    />
  </span>
</span>
`;

exports[`range [snapshot] > with multiple values 1`] = `
<span
  aria-disabled="false"
  aria-label="Range"
  class="vesper-range"
  data-orientation="horizontal"
  dir="ltr"
  style="--radix-slider-thumb-transform: translateX(-50%);"
>
  <span
    class="vesper-range-track"
    data-orientation="horizontal"
  >
    <span
      class="vesper-range-range"
      data-orientation="horizontal"
      style="left: 20%; right: 20%;"
    />
  </span>
  <span
    style="transform: var(--radix-slider-thumb-transform); position: absolute; left: calc(20% + 0px);"
  >
    <span
      aria-orientation="horizontal"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      class="vesper-typography vesper-typography-label-xs vesper-range-thumb vesper-range-thumb-labeled"
      data-orientation="horizontal"
      data-radix-collection-item=""
      role="slider"
      style="--vesper-range-thumb-label: "A";"
      tabindex="0"
    />
  </span>
  <span
    style="transform: var(--radix-slider-thumb-transform); position: absolute; left: calc(40% + 0px);"
  >
    <span
      aria-orientation="horizontal"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="40"
      class="vesper-typography vesper-typography-label-xs vesper-range-thumb vesper-range-thumb-labeled"
      data-orientation="horizontal"
      data-radix-collection-item=""
      role="slider"
      style="--vesper-range-thumb-label: "B";"
      tabindex="0"
    />
  </span>
  <span
    style="transform: var(--radix-slider-thumb-transform); position: absolute; left: calc(60% + 0px);"
  >
    <span
      aria-orientation="horizontal"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="60"
      class="vesper-typography vesper-typography-label-xs vesper-range-thumb vesper-range-thumb-labeled"
      data-orientation="horizontal"
      data-radix-collection-item=""
      role="slider"
      style="--vesper-range-thumb-label: "C";"
      tabindex="0"
    />
  </span>
  <span
    style="transform: var(--radix-slider-thumb-transform); position: absolute; left: calc(80% + 0px);"
  >
    <span
      aria-orientation="horizontal"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="80"
      class="vesper-typography vesper-typography-label-xs vesper-range-thumb vesper-range-thumb-labeled"
      data-orientation="horizontal"
      data-radix-collection-item=""
      role="slider"
      style="--vesper-range-thumb-label: "D";"
      tabindex="0"
    />
  </span>
</span>
`;

exports[`range [snapshot] > with ticks 1`] = `
<span
  aria-disabled="false"
  aria-label="Range"
  class="vesper-range"
  data-orientation="horizontal"
  dir="ltr"
  style="--radix-slider-thumb-transform: translateX(-50%);"
>
  <span
    class="vesper-range-track"
    data-orientation="horizontal"
  >
    <span
      class="vesper-range-tick"
      style="left: 20%;"
    />
    <span
      class="vesper-range-tick"
      style="left: 40%;"
    />
    <span
      class="vesper-range-tick"
      style="left: 60%;"
    />
    <span
      class="vesper-range-tick"
      style="left: 80%;"
    />
    <span
      class="vesper-range-range"
      data-orientation="horizontal"
      style="left: 0%; right: 0%;"
    />
  </span>
  <span
    style="transform: var(--radix-slider-thumb-transform); position: absolute; left: calc(0% + 0px);"
  >
    <span
      aria-orientation="horizontal"
      aria-valuemax="5"
      aria-valuemin="0"
      aria-valuenow="0"
      class="vesper-typography vesper-typography-label-xs vesper-range-thumb"
      data-orientation="horizontal"
      data-radix-collection-item=""
      role="slider"
      style=""
      tabindex="0"
    />
  </span>
  <span
    style="transform: var(--radix-slider-thumb-transform); position: absolute; left: calc(100% + 0px);"
  >
    <span
      aria-orientation="horizontal"
      aria-valuemax="5"
      aria-valuemin="0"
      aria-valuenow="5"
      class="vesper-typography vesper-typography-label-xs vesper-range-thumb"
      data-orientation="horizontal"
      data-radix-collection-item=""
      role="slider"
      style=""
      tabindex="0"
    />
  </span>
</span>
`;

exports[`range [snapshot] > with value labels 1`] = `
<span
  aria-disabled="false"
  aria-label="Range"
  class="vesper-range"
  data-orientation="horizontal"
  dir="ltr"
  style="--radix-slider-thumb-transform: translateX(-50%);"
>
  <span
    class="vesper-range-track"
    data-orientation="horizontal"
  >
    <span
      class="vesper-range-range"
      data-orientation="horizontal"
      style="left: 0%; right: 0%;"
    />
  </span>
  <span
    style="transform: var(--radix-slider-thumb-transform); position: absolute; left: calc(0% + 0px);"
  >
    <span
      aria-orientation="horizontal"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="vesper-typography vesper-typography-label-xs vesper-range-thumb vesper-range-thumb-labeled"
      data-orientation="horizontal"
      data-radix-collection-item=""
      role="slider"
      style="--vesper-range-thumb-label: "Min";"
      tabindex="0"
    />
  </span>
  <span
    style="transform: var(--radix-slider-thumb-transform); position: absolute; left: calc(100% + 0px);"
  >
    <span
      aria-orientation="horizontal"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="100"
      class="vesper-typography vesper-typography-label-xs vesper-range-thumb vesper-range-thumb-labeled"
      data-orientation="horizontal"
      data-radix-collection-item=""
      role="slider"
      style="--vesper-range-thumb-label: "Max";"
      tabindex="0"
    />
  </span>
</span>
`;
